version 8.1.3
   Added QT6 support by including the qtpy module
   Changed the use of scipy.interpolate.trapz to np.trapz
   Introduced a pyproject.toml file
   Added version number to the pyproject.toml file and modified the setup.py file accordingly
   Removed setup.cfg file.  setup.py no longer sets the version number.
   Updated the requirements.txt file using pipreq
   Updated the conda_installs.txt file
   Removed the need for the mkl package.  But this means the number of processors used for threading
        is set by the environment variables.  It is best to NOT use threading and have the number of
        processors set to the number of cores.  The number of threads used by each core should be 1.
        To force the BLAS routines in use it is best to use environment variables to control the 
        number of threads.  For example....
        export OMP_NUM_THREADS=1
        export OPENBLAS_NUM_THREADS=1
        export MKL_NUM_THREADS=1
        export VECLIB_MAXIMUM_THREADS=1
        export NUMEXPR_NUM_THREADS=1
   Added additional escape characters to pdmake.py - to remove SyntaxWarning errors
   Added additional escape characters to Mie.py - to remove SyntaxWarning errors
   Added additional escape characters to CastepOutputReader.py - to remove SyntaxWarning errors
   Added additional escape characters to CrystalOutputReader.py - to remove SyntaxWarning errors
   Added a -style default in the creation of the App.  Default style is "fusion"
   Fixed a bug in the save cif file (ViewerTab)

version 8.1.2
   Added a .nojekyll file into the docs/ directory to stop git hub pages over processing things
   Changed the name PDielec to pdielec in setup.py to help with Windows install on conda-forge
   Changed the find_program_from_name() function to return (program,qmprogram).  Affected routines are;
       - Utilities.py, HelperRoutines.py p1reader.py, preader.py, vibanalysis,py, App.py, NoteBook.py, 
       - MainTab.py, p2cif.py.