@@ -6,23 +6,23 @@ build-backend = "setuptools.build_meta"
 name = "pdielec"
 version = "8.1.3"
 dependencies = [
-    "dill",
-    "imageio",
-    "imageio-ffmpeg",
-    "matplotlib",
+    "setuptools",
+    "scipy",
     "numpy",
+    "matplotlib",
     "openpyxl",
     "psutil",
     "PyOpenGL",
     "PyQt6",
-    "PyYAML",
     "QtPy",
+    "PyYAML",
     "scikit_learn",
-    "scipy",
-    "setuptools",
     "spglib",
     "termcolor",
     "XlsxWriter",
+    "openpyxl",
+    "imageio",
+    "imageio-ffmpeg",
 ]
 requires-python = ">=3.7"
 authors = [
