@@ -1,16 +1,17 @@
-dill
-imageio
-imageio-ffmpeg
-matplotlib
+pip
 numpy
-openpyxl
-psutil
-PyOpenGL
-PyYAML
-QtPy
-scikit_learn
 scipy
+pyqt6
+qtpy
+matplotlib
+psutil
+pyopengl
+pyyaml
+scikit_learn
 setuptools
 spglib
 termcolor
-XlsxWriter
+openpyxl
+xlsxwriter
+imageio
+imageio-ffmpeg
