@@ -21,18 +21,18 @@ with open("LICENSE.txt", "r") as fh:
 # Create an __init_.py file for each module
 init_lines = ["# Created by setup.py, whilst creating a new PyPi release\n","__version__ = \"{}\"\n".format(version)]
 with open("PDielec/__init__.py", "w") as fh:
-    fh.writelines(['\'\'\'\n'])
-    fh.writelines(['PDielec: library for processing DFT calculations for infrared and terahertz spectroscopy\n'])
+    fh.writelines(['"""'])
+    fh.writelines(['PDielec: library for processing DFT calculations for infrared and terahertz spectroscopy.\n'])
     fh.writelines(['\n'])
     fh.writelines(licence)
-    fh.writelines(['\'\'\'\n'])
+    fh.writelines(['"""\n'])
     fh.writelines(init_lines)
 with open("PDielec/GUI/__init__.py", "w") as fh:
-    fh.writelines(['\'\'\'\n'])
-    fh.writelines(['PDGui: GUI for processing DFT calculations for infrared and terahertz spectroscopy\n'])
+    fh.writelines(['"""'])
+    fh.writelines(['PDGui: GUI for processing DFT calculations for infrared and terahertz spectroscopy.\n'])
     fh.writelines(['\n'])
     fh.writelines(licence)
-    fh.writelines(['\'\'\'\n'])
+    fh.writelines(['"""\n'])
     fh.writelines(init_lines)
 
 setuptools.setup()
